RESOLVED FIXED181552
WebContextMenuListenerProxy.cpp not including config on first line
https://bugs.webkit.org/show_bug.cgi?id=181552
Summary WebContextMenuListenerProxy.cpp not including config on first line
Don Olmstead
Reported 2018-01-11 13:15:48 PST
#if ENABLE(CONTEXT_MENUS) is the first line after the copyright and config.h is included within that.
Attachments
Patch (1.10 KB, patch)
2018-01-11 13:18 PST, Don Olmstead
no flags
Don Olmstead
Comment 1 2018-01-11 13:18:34 PST
WebKit Commit Bot
Comment 2 2018-01-11 14:14:42 PST
Comment on attachment 331104 [details] Patch Clearing flags on attachment: 331104 Committed r226805: <https://trac.webkit.org/changeset/226805>
WebKit Commit Bot
Comment 3 2018-01-11 14:14:44 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-01-11 14:17:09 PST
Note You need to log in before you can comment on or make changes to this bug.